
Version 3.4.1 - xx yyy 2019
Generic changes/fixes
	* add control listener to handle size changes after modifying menu cool bar
	* uniform build execution environment to Java 8 compatible byte code
	* split build in OS dependent steps (future MAC OS does not support 32 bit makensis processing)
	* update swt.jar for Linux 64 bit to fix webkit problems

Device specific changes/fixes
	*

Version 3.4.0 - 10 Nov 2019
Generic changes/fixes
	* update launch4j Windows executable wrapper supporting java PATH entries in addition to registry
	* enable secondary trigger to extend primary trigger range -> require XSD upgrade
	* add additional comment placeholder for motor capacity for cases with sumByTriggerReferenceOrdinal.

Device specific changes/fixes
	* JetiAdapter - fix backward compatibility skipping sensor parameter without unit, result as missing measurement
	* JetiAdapter - enhance Tx->Rx statistics
	* GPS-Logger2 - enable secondary trigger definition for combinations with UL2 data (UniLog2 or UniSensE)
	* HoTTAdapterD - correct indexing parse EAM *.log
	* HoTTAdapter2/D - enable selection of altitude/climb values source sensor *.log
	* HoTTAdapter2 - enable secondary trigger range for GAM and ESC as example
	* PolaronACDC - fix data capturing channel 2
	* Open-Tx - enable log time step > 1000 msec 
	* iChargerUSB* - enable additional special states used for internal data evaluation

Version 3.3.9 - 25 Aug 2019
Generic changes/fixes
	* update measurement properties XML containing [] by mistake
	* correct average calculation using trigger ranges
	* fix makensis languages.nsh encoding
	* add capability to integrate values by trigger (require XSD update)
	* update device properties editor to support capability to integrate values by trigger
	* update documentation
	
Device specific changes/fixes
	* HottAdapter* - correct trigger description text in XML
	* HoTTAdapter* - *.log remove evaluation of transmitter event and warning to avoid end user confusion