@@ -584,7 +584,7 @@ GDE_MSGT0355=Average
 GDE_MSGT0356=Maximum
 GDE_MSGT0357=Standard-deviation
 GDE_MSGT0358=Miscellaneous
-GDE_MSGT0359=[hh:mm:ss:SSS]
+GDE_MSGT0359=[hh:mm:ss.SSS]
 GDE_MSGT0360=Interval = 
 GDE_MSGT0361=\ ms 
 GDE_MSGT0362=Desktop Launcher
