@@ -584,7 +584,7 @@ GDE_MSGT0355=Mittelwert
 GDE_MSGT0356=Maximum
 GDE_MSGT0357=Standardabweichung
 GDE_MSGT0358=Sonstiges
-GDE_MSGT0359=[HH:mm:ss:SSS]
+GDE_MSGT0359=[HH:mm:ss.SSS]
 GDE_MSGT0360=Intervall = 
 GDE_MSGT0361=\ ms 
 GDE_MSGT0362=Desktop Icon
